{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 22,
  "lineage": "da88c614-112e-310c-1f0a-10d1b0ca120b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0415a53152e2972d4",
            "domain": "vpc",
            "id": "eipalloc-0b7ce9e1c0ea993cb",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0c5963ec91eea5bbb",
            "private_dns": "ip-10-0-0-105.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.105",
            "public_dns": "ec2-13-209-95-38.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.95.38",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:219307222257:internet-gateway/igw-0e31f59e66deda7f1",
            "id": "igw-0e31f59e66deda7f1",
            "owner_id": "219307222257",
            "tags": {
              "Name": "terraform-giyong-igw"
            },
            "vpc_id": "vpc-042a76acb2061b091"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b7ce9e1c0ea993cb",
            "id": "nat-0f4a8ad185e50fdd0",
            "network_interface_id": "eni-0c5963ec91eea5bbb",
            "private_ip": "10.0.0.105",
            "public_ip": "13.209.95.38",
            "subnet_id": "subnet-0961546f70076ccfe",
            "tags": {
              "Name": "terraform-NATGW"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fc395ea70d8e502c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f4a8ad185e50fdd0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fc395ea70d8e502c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:219307222257:route-table/rtb-0fc395ea70d8e502c",
            "id": "rtb-0fc395ea70d8e502c",
            "owner_id": "219307222257",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f4a8ad185e50fdd0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-rt-private"
            },
            "vpc_id": "vpc-042a76acb2061b091"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:219307222257:route-table/rtb-007671cbcf3de9407",
            "id": "rtb-007671cbcf3de9407",
            "owner_id": "219307222257",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e31f59e66deda7f1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-rt-public"
            },
            "vpc_id": "vpc-042a76acb2061b091"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f36ac5b4af86c050",
            "route_table_id": "rtb-0fc395ea70d8e502c",
            "subnet_id": "subnet-0097fed2c01f7a905"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a092031a11f6fe1c",
            "route_table_id": "rtb-007671cbcf3de9407",
            "subnet_id": "subnet-0961546f70076ccfe"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:219307222257:subnet/subnet-0097fed2c01f7a905",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0097fed2c01f7a905",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "219307222257",
            "tags": {
              "Name": "terraform-giyong-private-subnet"
            },
            "tags_all": {
              "Name": "terraform-giyong-private-subnet"
            },
            "vpc_id": "vpc-042a76acb2061b091"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:219307222257:subnet/subnet-0961546f70076ccfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0961546f70076ccfe",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "219307222257",
            "tags": {
              "Name": "terraform-giyong-public-subnet"
            },
            "tags_all": {
              "Name": "terraform-giyong-public-subnet"
            },
            "vpc_id": "vpc-042a76acb2061b091"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:219307222257:vpc/vpc-042a76acb2061b091",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d1cb78474604ad8b",
            "default_route_table_id": "rtb-0ee883a621c55f43b",
            "default_security_group_id": "sg-03eefb7fc8ae8e627",
            "dhcp_options_id": "dopt-edd6bb86",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-042a76acb2061b091",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ee883a621c55f43b",
            "owner_id": "219307222257",
            "tags": {
              "Name": "terraform-giyong"
            },
            "tags_all": {
              "Name": "terraform-giyong"
            }
          }
        }
      ]
    }
  ]
}